tests/bad/int8_-129.radl

# should be rejected because int8 is too small.

x : int8 -129
